--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4331,7 +4331,9 @@ satisfiability (or a similar property) of the OMS is expressed.
 
 \medskip
 \begin{center}
-\includegraphics[height=\textheight]{mof/Class_Diagram__oms.png}
+\includegraphics[width=\textwidth]{mof/extension&closure.png}
+
+\includegraphics[width=\textwidth]{mof/translation&reduction.png}
 \end{center}
 
 An OMS definition \syntax{OMSDefinition} names an  OMS.  
@@ -4520,7 +4522,9 @@ either a named interpretation (\syntax{InterpretationDefinition}, \syntax{Entail
 OMS (\syntax{ModuleRelDefinition}), or a named \termref{alignment} (\syntax{AlignmentDefinition}).
 
 \begin{center}
-\includegraphics[height=\textheight]{mof/Class_Diagram__oms-mappings.png}
+\includegraphics[width=\textwidth]{mof/oms-mappings1.png}
+
+\includegraphics[width=\textwidth]{mof/oms-mappings2.png}
 \end{center}
 
 The \syntax{SymbolMap} in an interpretation always must lead to a signature morphism; a proof 
