still better MOF diagrams

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4201,7 +4201,7 @@ subsequent \syntax{LibraryItem}s.
 At the beginning of a \DOL library, one can declare a \syntax{PrefixMap} for abbreviating long IRIs \cbs using CURIEs\cbe; see \cref{c:identifiers} for further details.
 
 \medskip
-\includegraphics[width=\textwidth]{mof/Class_Diagram__libraries.png}
+\includegraphics[width=\textwidth]{mof/libraries.png}
 
 
 
@@ -4266,7 +4266,7 @@ and the extending OMS of an\cbe{} \syntax{ExtensionOMS}) between the involved OM
 explicitly excluded.
 
 \medskip
-\includegraphics[width=\textwidth]{mof/Class_Diagram__networks.png}
+\includegraphics[width=\textwidth]{mof/networks.png}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -4335,6 +4335,11 @@ might also be applied to a single OMS, which is then implicitly
 regarded as an extension of the empty OMS. In this case,
 satisfiability (or a similar property) of the OMS is expressed.
 \cbe
+\medskip
+
+\begin{center}
+\includegraphics[height=\textheight]{mof/oms.png}
+\end{center}
 
 \medskip
 \begin{center}
@@ -4356,7 +4361,7 @@ unsatisfiability.
 OMS (e.g.\ returned by model finders) that are used to describe single models. 
 
 \medskip
-\includegraphics[width=\textwidth]{mof/Class_Diagram__oms-definition.png}
+\includegraphics[width=\textwidth]{mof/oms-definition.png}
 
 A
 \syntax{SymbolList}, used in an OMS \syntax{Reduction}, is a
@@ -4512,9 +4517,12 @@ either a named interpretation (\syntax{InterpretationDefinition}, \syntax{Entail
 OMS (\syntax{ModuleRelDefinition}), or a named \termref{alignment} (\syntax{AlignmentDefinition}).
 
 \begin{center}
-\includegraphics[width=\textwidth]{mof/oms-mappings1.png}
+\includegraphics[width=\textwidth]{mof/interpretations&refinements.png}
 
-\includegraphics[width=\textwidth]{mof/oms-mappings2.png}
+\includegraphics[width=\textwidth]{mof/entailment&equivalence.png}
+
+\includegraphics[width=\textwidth]{mof/modules.png}
+
 \end{center}
 
 The \syntax{SymbolMap} in an interpretation always must lead to a signature morphism; a proof 
@@ -4549,7 +4557,7 @@ With \syntax{AlignmentSemantics}, different styles of networks of aligned ontolo
 a logic-specific way) of alignments can be specified: whether a single domain is assumed, all domains are embedded into a global domain,
 or whether several local domains are linked (``contextualized'') by relations.
 
-\includegraphics[width=\textwidth]{mof/Class_Diagram__alignment.png}
+\includegraphics[width=\textwidth]{mof/alignment.png}
 
 A \syntax{ModuleRelDefinition} declares that a certain OMS
 actually is a module of some other OMS with respect
@@ -4712,7 +4720,7 @@ usually ending with \syntax{\#} or \syntax{/}. ({See annex~\ref{a:loc/id} for a 
 \end{description}
 
 \medskip
-\includegraphics[width=\textwidth]{mof/Class_Diagram__prefixes.png}
+\includegraphics[width=\textwidth]{mof/prefixes.png}
 
 
 
