adjusted sizes of MOF diagrams

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4201,7 +4201,9 @@ subsequent \syntax{LibraryItem}s.
 At the beginning of a \DOL library, one can declare a \syntax{PrefixMap} for abbreviating long IRIs \cbs using CURIEs\cbe; see \cref{c:identifiers} for further details.
 
 \medskip
-\includegraphics[width=\textwidth]{mof/libraries.png}
+\begin{center}
+\includegraphics[scale=0.35]{mof/libraries.png}
+\end{center}
 
 
 
@@ -4266,7 +4268,9 @@ and the extending OMS of an\cbe{} \syntax{ExtensionOMS}) between the involved OM
 explicitly excluded.
 
 \medskip
-\includegraphics[width=\textwidth]{mof/networks.png}
+\begin{center}
+\includegraphics[scale=0.35]{mof/networks.png}
+\end{center}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -4343,9 +4347,9 @@ satisfiability (or a similar property) of the OMS is expressed.
 
 \medskip
 \begin{center}
-\includegraphics[width=\textwidth]{mof/extension&closure.png}
+\includegraphics[scale=0.35]{mof/extension&closure.png}
 
-\includegraphics[width=\textwidth]{mof/translation&reduction.png}
+\includegraphics[scale=0.35]{mof/translation&reduction.png}
 \end{center}
 
 An OMS definition \syntax{OMSDefinition} names an  OMS.  
@@ -4361,7 +4365,9 @@ unsatisfiability.
 OMS (e.g.\ returned by model finders) that are used to describe single models. 
 
 \medskip
-\includegraphics[width=\textwidth]{mof/oms-definition.png}
+\begin{center}
+\includegraphics[scale=0.35]{mof/oms-definition.png}
+\end{center}
 
 A
 \syntax{SymbolList}, used in an OMS \syntax{Reduction}, is a
@@ -4517,11 +4523,11 @@ either a named interpretation (\syntax{InterpretationDefinition}, \syntax{Entail
 OMS (\syntax{ModuleRelDefinition}), or a named \termref{alignment} (\syntax{AlignmentDefinition}).
 
 \begin{center}
-\includegraphics[width=\textwidth]{mof/interpretations&refinements.png}
+\includegraphics[scale=0.35]{mof/interpretations&refinements.png}
 
-\includegraphics[width=\textwidth]{mof/entailment&equivalence.png}
+\includegraphics[scale=0.30]{mof/entailment&equivalence.png}
 
-\includegraphics[width=\textwidth]{mof/modules.png}
+\includegraphics[scale=0.35]{mof/modules.png}
 
 \end{center}
 
@@ -4557,7 +4563,9 @@ With \syntax{AlignmentSemantics}, different styles of networks of aligned ontolo
 a logic-specific way) of alignments can be specified: whether a single domain is assumed, all domains are embedded into a global domain,
 or whether several local domains are linked (``contextualized'') by relations.
 
-\includegraphics[width=\textwidth]{mof/alignment.png}
+\begin{center}
+\includegraphics[scale=0.35]{mof/alignment.png}
+\end{center}
 
 A \syntax{ModuleRelDefinition} declares that a certain OMS
 actually is a module of some other OMS with respect
@@ -4720,7 +4728,9 @@ usually ending with \syntax{\#} or \syntax{/}. ({See annex~\ref{a:loc/id} for a 
 \end{description}
 
 \medskip
-\includegraphics[width=\textwidth]{mof/prefixes.png}
+\begin{center}
+\includegraphics[scale=0.35]{mof/prefixes.png}
+\end{center}
 
 
 
@@ -9783,7 +9793,9 @@ complete, meaning that it comprises all answer substitutions to the query.
 but using minimizations, (part of) OMS can be equipped with a closed
 world semantics.\cbe
 
+\begin{center}
 \includegraphics[scale=0.5]{mof/queries.png}
+\end{center}
 
 \sclause{EBNF Concrete Syntax}
 
