--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1798,7 +1798,7 @@ of logic (model theory).
 \begin{definitions}
 \termdefinitionLight{basic OMS\index{basic OMS}\synonym flat OMS}{native OMS that does not utilize any elements from the structuring language aspects of its language.}
   \begin{note}
-    Basic OMS are self-contained in the sense that\cbs their\cbe semantics does not depend on some other OMS.  In particular,\cbs a basic\cbe OMS does not involve any importations.
+    Basic OMS are self-contained in the sense that\cbs their\cbe semantics does not depend on some other OMS.  In particular,\cbs a basic\cbe OMS does not involve any imports.
   \end{note}
   \begin{note}
     Since a basic OMS has no structuring elements, it consists of \cbs (or at least denotes)\cbe{} a \termref{signature} equipped with a set of sentences\index{sentence} and annotations\index{annotation}.
@@ -3898,7 +3898,7 @@ The major functions of \DOL are the following:
 \end{itemize}
  
 \cbs Each of these functions corresponds to a syntactic category in \DOL: native OMS, structured
- OMS, OMS mappings, and OMS networks. They (together with importations) form the items in a
+ OMS, OMS mappings, and OMS networks. They (together with imports) form the items in a
 \emph{\DOL library}, and are, in this sense, the most important metaclasses of \DOL. 
 %The syntax of \DOL roughly follows these functions.
 %Native OMS, the various kind of structured OMS, OMS mappings, and OMS networks are the most important metaclasses   of \DOL. 
