proof reading chapter 4

--- a/Standard/dol-papers.bib
+++ b/Standard/dol-papers.bib
@@ -93,3 +93,12 @@ the DOL alignment features are currently being implemented in the Ontohub/Hets e
 		Volume = {4},
 		Year = {2010}}
 	
+@Article{Inconsistency,
+  author = 	 {Till Mossakowski and Lutz {Schr\"oder}},
+  title = 	 {On Inconsistency and Unsatisfiability},
+  journal = 	 {Int J Software Informatics},
+  year = 	 {2015},
+  volume = 	 {9},
+  number = 	 {2},
+}
+
