larger page size, larger MOF diagrams -> better readable

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -37,6 +37,11 @@
 
  \documentclass[10pt,fleqn,final]{scrreprt}
 % \documentclass[10pt,fleqn,draft]{scrreprt}
+\textwidth 17.5cm
+\hoffset -2cm
+\textheight 24cm
+\voffset -1cm
+
 \usepackage{changebar}
  %
    \newcommand{\cbs}[0]{\xspace}
@@ -4213,7 +4218,7 @@ At the beginning of a \DOL library, one can declare a \syntax{PrefixMap} for abb
 
 \medskip
 \begin{center}
-\includegraphics[scale=0.35]{mof/libraries.png}
+\includegraphics[scale=0.47]{mof/libraries.png}
 \end{center}
 
 
@@ -4280,7 +4285,7 @@ explicitly excluded.
 
 \medskip
 \begin{center}
-\includegraphics[scale=0.35]{mof/networks.png}
+\includegraphics[scale=0.47]{mof/networks.png}
 \end{center}
 
 
@@ -4352,15 +4357,20 @@ satisfiability (or a similar property) of the OMS is expressed.
 \cbe
 \medskip
 
+\newpage
+\voffset -2cm
 \begin{center}
-\includegraphics[height=\textheight]{mof/oms.png}
+\includegraphics[scale=0.47]{mof/oms.png}
 \end{center}
+
+\newpage
+\voffset -1cm
 
 \medskip
 \begin{center}
-\includegraphics[scale=0.35]{mof/extension&closure.png}
+\includegraphics[scale=0.47]{mof/extension&closure.png}
 
-\includegraphics[scale=0.35]{mof/translation&reduction.png}
+\includegraphics[scale=0.47]{mof/translation&reduction.png}
 \end{center}
 
 An OMS definition \syntax{OMSDefinition} names an  OMS.  
@@ -4530,11 +4540,11 @@ either a named interpretation (\syntax{InterpretationDefinition}, \syntax{Entail
 OMS (\syntax{ModuleRelDefinition}), or a named \termref{alignment} (\syntax{AlignmentDefinition}).
 
 \begin{center}
-\includegraphics[scale=0.35]{mof/interpretations&refinements.png}
+\includegraphics[scale=0.47]{mof/interpretations&refinements.png}
 
-\includegraphics[scale=0.30]{mof/entailment&equivalence.png}
+\includegraphics[scale=0.47]{mof/entailment&equivalence.png}
 
-\includegraphics[scale=0.35]{mof/modules.png}
+\includegraphics[scale=0.47]{mof/modules.png}
 
 \end{center}
 
@@ -4571,7 +4581,7 @@ a logic-specific way) of alignments can be specified: whether a single domain is
 or whether several local domains are linked (``contextualized'') by relations.
 
 \begin{center}
-\includegraphics[scale=0.35]{mof/alignment.png}
+\includegraphics[scale=0.47]{mof/alignment.png}
 \end{center}
 
 A \syntax{ModuleRelDefinition} declares that a certain OMS
@@ -4736,7 +4746,7 @@ usually ending with \syntax{\#} or \syntax{/}. ({See annex~\ref{a:loc/id} for a 
 
 \medskip
 \begin{center}
-\includegraphics[scale=0.35]{mof/prefixes.png}
+\includegraphics[scale=0.47]{mof/prefixes.png}
 \end{center}
 
 
